Attempting to use privateLookupIn to avoid access to internals; BUT: this needs injecting a class, and that won't work for stuff load by the bootstrap CL.